﻿
	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Package help is now converted from Rd by the R-based converters
	that were first introduced in 2.9.0.  This means

	- Packages that were installed by R-devel after 2009-08-09
	  should not be used with earlier versions of R, and some
	  aspects of package help will be missing if there are so
	  used.  (Currently text and latex help, eventually also
	  the run-able examples.)

	- Text help, latex help and examples for packages installed
          under the new system is converted on-demand from stored
          parsed Rd files.  (Conversions stored in earlier
          installations are still used.)

	The converters are still being polished and produce incorrect
	latex or HTML conersions for ca 20 packages.  However, they
	correct fewer errors in the inputs and most errors seen have
	been the result of errors in package sources.


NEW FEATURES

    o	polygon(), pdf() and postscript() now have a parameter
	'fillOddEven' (default FALSE), which controls the mode used for
	polygon fills of self-intersecting shapes.

    o	New debugonce() function; further, getOption("deparse.max.lines")
	is now observed as well when debugging, from a code suggestion by
	John Brzustowski.  (PR#13647/8)

    o	plot() methods for "stepfun" and hence "ecdf" no longer plot
	points by default for n >= 1000.

    o	[g]sub(*, perl=TRUE) now also supports '\E' in order to *end*
	\U and \L case changes, thanks to a patch from Bill Dunlap.

    o	factor(), `levels<-`(), etc, now ensure that the resulting factor
	levels are unique (as was always the implied intention).  Factors
	with duplicated levels are still constructible by low-level means,
	but are now declared illegal.

    o	New print() (S3) method for class "function", also used for