@@ -12,15 +12,15 @@
   which depend on this one, and (optionally) so on recursively.
 }
 \usage{
-dependsOnPkgs(pkgs, dependencies = c("Depends", "Imports"),
+dependsOnPkgs(pkgs, dependencies = c("Depends", "Imports", "LinkingTo"),
               recursive = TRUE, lib.loc = NULL,
               installed = installed.packages(lib.loc, fields = "Enhances"))
 }
 \arguments{
   \item{pkgs}{a character vector of package names.}
   \item{dependencies}{a character vector listing the types of
-    dependencies, a subset of \code{c("Depends", "Imports", "Suggests",
-      "Enhances")}.}
+    dependencies, a subset of \code{c("Depends", "Imports", "LinkingTo",
+      "Suggests", "Enhances")}.}
   \item{recursive}{logical: should reverse dependencies of reverse
     dependencies (and so on) be included?}
   \item{lib.loc}{a character vector of \R library trees, or \code{NULL}
