@@ -26,9 +26,12 @@ write_PACKAGES(dir = ".", fields = NULL,
     \file{PACKAGES} and \file{PACKAGES.gz} files in addition to the
     default ones, or \code{NULL} (default).  The default corresponds to
     the fields needed by \code{\link{available.packages}}:
-    \code{"Package"}, \code{"Bundle"}, \code{"Priority"},
-    \code{"Version"}, \code{"Depends"}, \code{"Suggests"},
-    \code{"Imports"} and \code{"Contains"}.
+    \code{"Package"}, \code{"Version"}, \code{"Priority"},
+    \code{"Bundle"}, \code{"Contains"},
+    \code{"Depends"}, \code{"Imports"}, \code{"LinkingTo"},
+    \code{"Suggests"}, \code{"Enhances"},
+    \code{"OS_type"}, and
+    \code{"License"}.
   }
   \item{type}{
     Type of packages: currently source \file{.tar.gz} archives, and Mac
