@@ -49,9 +49,13 @@ installed.packages(lib.loc = NULL, priority = NULL,
 }
 \value{
   A matrix with one row per package, row names the package names and
-  column names \code{"Package"}, \code{"LibPath"}, \code{"Version"},
-  \code{"Priority"}, \code{"Bundle"}, \code{"Contains"},
-  \code{"Depends"}, \code{"Suggests"}, \code{"Imports"} and
+  column names
+  \code{"Package"}, \code{"LibPath"},
+  \code{"Version"}, \code{"Priority"},
+  \code{"Bundle"}, \code{"Contains"},
+  \code{"Depends"}, \code{"Imports"}, \code{"LinkingTo"},
+  \code{"Suggests"}, \code{"Enhances"},
+  \code{"OS_type"}, \code{"License"} and
   \code{"Built"} (the \R version the package was built under).
   Additional columns can be specified using the \code{fields}
   argument.
