@@ -1,4 +1,4 @@
-﻿
+
 	**************************************************
 	*						 *
 	*	       2.10 SERIES NEWS			 *
@@ -214,6 +214,12 @@ NEW FEATURES
 
     o	grep() and friends now use useBytes=TRUE to inhibit the
  	translation of inputs with marked encodings.
+
+    o	DESCRIPTION 'LinkingTo' specs are now recognized as installation
+    	dependencies, and included in package management computations.
+
+    o	Standardized DESCRIPTION 'License' specs are now available for
+    	package management computations.
 
 
 Rd HELP FILE CHANGES
